EandT/main/default/objects/Contact/fields/Activity_Level__c.field-meta.xml
<CustomField>
    <fullName>Activity_Level__c</fullName>
    <inlineHelpText>Give details of what type and frequecncy of exercise the person undertakes</inlineHelpText>
    <label>Activity Level</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>