EandT/main/default/objects/Contact/fields/Current_Medications__c.field-meta.xml
<CustomField>
    <fullName>Current_Medications__c</fullName>
    <inlineHelpText>Enter names of any medication that the person is currently taking</inlineHelpText>
    <label>Current Medications</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>