EandT/main/default/objects/Contact/fields/Health_Issues__c.field-meta.xml
<CustomField>
    <fullName>Health_Issues__c</fullName>
    <description>Any health issues which migh affect the student's ability to do exercises</description>
    <inlineHelpText>Check every box to indicate if the person has issues which should be taken account of when exercising.  You may check more than one box.  If no issues, don't check any boxes</inlineHelpText>
    <label>Health Issues</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arthritis</fullName>
            </value>
            <value>
                <fullName>Asthma</fullName>
            </value>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Digestive Problems</fullName>
            </value>
            <value>
                <fullName>Epilepsy</fullName>
            </value>
            <value>
                <fullName>Glaucoma</fullName>
            </value>
            <value>
                <fullName>Heart Condition</fullName>
            </value>
            <value>
                <fullName>High Blood Pressure</fullName>
            </value>
            <value>
                <fullName>Osteoporosis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>