EandT/main/default/objects/Contact/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the person is no longer an active customer.  It removes them from the Active Customers view.  It does not stop them from accessing their information from the customer portal.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>