EandT/main/default/objects/Contact/fields/Issues_Description__c.field-meta.xml
<CustomField>
    <fullName>Issues_Description__c</fullName>
    <inlineHelpText>List any issues not covered by pick lists that need more detail. Include any otehr conditions affected by exercise, prior surgeries or injuries, medications, recent pregnancies</inlineHelpText>
    <label>Issues Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>