EandT/main/default/objects/Contact/fields/Joint_Muscle_Issues__c.field-meta.xml
<CustomField>
    <fullName>Joint_Muscle_Issues__c</fullName>
    <inlineHelpText>Check one or more boxes to indicate any issues.  If "Other" selected, use Issues text box to provide more information</inlineHelpText>
    <label>Joint/Muscle Issues</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ankle</fullName>
            </value>
            <value>
                <fullName>Elbow</fullName>
            </value>
            <value>
                <fullName>Foot</fullName>
            </value>
            <value>
                <fullName>Hip</fullName>
            </value>
            <value>
                <fullName>Knee</fullName>
            </value>
            <value>
                <fullName>Neck</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Shoulder</fullName>
            </value>
            <value>
                <fullName>Spine</fullName>
            </value>
            <value>
                <fullName>Wrist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>