EandT/main/default/objects/Contact/fields/Pregnant_Recently_Given_Birth__c.field-meta.xml
<CustomField>
    <fullName>Pregnant_Recently_Given_Birth__c</fullName>
    <inlineHelpText>Are you pregnant or have you recently given birth?</inlineHelpText>
    <label>Pregnant/Recently Given Birth?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sex__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>