EandT/main/default/objects/Contact/fields/Prior_Surgeries__c.field-meta.xml
<CustomField>
    <fullName>Prior_Surgeries__c</fullName>
    <label>Prior Surgeries or Injuries</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>